only enable a SecurityManager if add-ons are actually in use